--- a/default.hbs
+++ b/default.hbs
@@ -4,8 +4,12 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link rel="stylesheet" type="text/css" href="{{asset "built/latex.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "built/katex.min.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "built/copy-tex.min.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "built/prism-xonokai.css"}}" />
 
     <title>{{meta_title}}</title>
 
@@ -14,29 +18,8 @@
 
 </head>
 <body class="{{body_class}}">
-<div class="gh-viewport">
 
-<header id="gh-head" class="gh-head">
-    <nav class="gh-head-inner gh-container">
-
-        <div class="gh-head-brand">
-            <a class="gh-head-logo" href="{{@site.url}}">
-                {{#if @site.logo}}
-                    <img src="{{@site.logo}}" alt="{{@site.title}}" />
-                {{else}}
-                    {{@site.title}}
-                {{/if}}
-            </a>
-            <a class="gh-burger" role="button">
-                <div class="gh-burger-box">
-                    <div class="gh-burger-inner"></div>
-                </div>
-            </a>
-        </div>
-        <div class="gh-head-menu">
-            {{navigation}}
-        </div>
-        <div class="gh-head-actions">
+<div class="gh-head-actions">
             <div class="gh-head-actions-list">
                 {{#if @site.facebook}}
                 <a href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
@@ -47,67 +30,53 @@
                 <a href="https://feedly.com/i/subscription/feed/{{@site.url}}/rss/" title="RSS" target="_blank" rel="noopener">{{> "icons/rss"}}</a>
             </div>
         </div>
-    </nav>
+
+<header>
+    <h1>
+        <a class="gh-head-logo" href="{{@site.url}}">
+            {{#if @site.logo}}
+                <img src="{{@site.logo}}" alt="{{@site.title}}" />
+            {{else}}
+                {{@site.title}}
+            {{/if}}
+        </a>
+    </h1>
+    <div class="gh-head-menu">
+            {{navigation}}
+    </div>
 </header>
 
-<main class="gh-main">
+<hr>
+
+<main>
 
     {{{body}}}
     {{!-- All content gets inserted here, index.hbs, post.hbs, etc --}}
 
 </main>
 
-<footer class="gh-foot">
-    <div class="gh-container">
-        <div class="gh-foot-menu">
-            {{navigation}}
+{{!-- <foot> --}}
+
+<footer>
+    <hr>
+    <div class="foot">
+        <div class="copyright">
+            <a class="" href="{{@site.url}}">
+                {{@site.title}}
+            </a> © 2021
         </div>
-        <div class="gh-foot-meta">
-            Published with <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a>
+        <div class="info">
+            Published with <a href="https://ghost.org" target="_blank" rel="noopener">Ghost</a> <br>
+            Theme based on <a href="https://latex.now.sh/" target="_blank" rel="noopener">LaTeX.css</a>
         </div>
     </div>
 </footer>
 
-</div>
-
-{{!-- <foot> --}}
-
-<script src="{{asset "built/jquery-3.4.1.min.js"}}"></script>
-
-{{#if pagination.pages}}
-<script>
-    var maxPages = parseInt('{{pagination.pages}}');
-</script>
-<script src="{{asset "built/infinitescroll.js"}}"></script>
-{{/if}}
-
-<script>
-$(document).ready(function () {
-    // Mobile Menu Trigger
-    $('.gh-burger').click(function () {
-        $('body').toggleClass('gh-head-open');
-    });
-});
-</script>
-
-{{#is "post, page"}}
-<script src="{{asset "built/jquery.fitvids.js"}}"></script>
-<script>
-var images = document.querySelectorAll('.kg-gallery-image img');
-images.forEach(function (image) {
-    var container = image.closest('.kg-gallery-image');
-    var width = image.attributes.width.value;
-    var height = image.attributes.height.value;
-    var ratio = width / height;
-    container.style.flex = ratio + ' 1 0%';
-});
-$(document).ready(function () {
-    var $postContent = $(".gh-content");
-    $postContent.fitVids();
-});
-</script>
-{{/is}}
-
+<script defer src="{{asset "js/katex.min.js"}}"></script>
+<script defer src="{{asset "js/auto-render.min.js"}}"
+        onload="renderMathInElement(document.body);"></script>
+<script defer src="{{asset "js/copy-tex.min.js"}}"></script>
+<script defer src="{{asset "js/prism.js"}}"></script>
 {{ghost_foot}}
 {{!-- Outputs important scripts - should always be included before closing body tag --}}
 
