--- a/index.hbs
+++ b/index.hbs
@@ -1,14 +1,20 @@
 {{!< default}}
 
+<div class="abstract">
+    <h2>Abstract</h2>
+    <p>{{@site.description}}</p>
+  </div>
+
 <div class="gh-page">
     <div class="gh-container">
 
         <div class="gh-postfeed">
-        {{#foreach posts}}
+            <h2>Posts</h2>
+            {{#foreach posts}}
 
-            {{> "card"}} {{!-- partials/card.hbs --}}
+                {{> "card"}} {{!-- partials/card.hbs --}}
 
-        {{/foreach}}
+            {{/foreach}}
         </div>
 
     </div>
