--- a/page.hbs
+++ b/page.hbs
@@ -3,17 +3,30 @@
 {{#post}}
 <article class="gh-article {{post_class}}">
 
-    <header class="gh-header gh-canvas">
-        <h1 class="gh-title">{{title}}</h1>
+    {{#if feature_image}}
+        <div class="cover-title-container">
+            <div class="cover-title" >
+                <header class="gh-header gh-canvas gh-title">
+                        <h1>{{title}}</h1>
+                </header>
+                <div class="black-cover"></div>
+                <img class="gh-feature-image" src="{{feature_image}}" alt="{{title}}" />
+            </div>
+        </div>
+    {{else}}
+        <header class="gh-header gh-canvas gh-title">
+            <h1>{{title}}</h1>
+        </header>
+    {{/if}}
 
-        {{#if custom_excerpt}}
-            <p class="gh-excerpt">{{custom_excerpt}}</p>
-        {{/if}}
-
-        {{#if feature_image}}
-            <img class="gh-feature-image" src="{{feature_image}}" alt="{{title}}" />
-        {{/if}}
-    </header>
+    {{#if custom_excerpt}}
+    <div class="abstract">
+        <h2>Abstract</h2>
+        <p>
+        {{custom_excerpt}}
+        </p>
+    </div>
+    {{/if}}
 
     <div class="gh-content gh-canvas">
         {{content}}
