--- a/partials/card.hbs
+++ b/partials/card.hbs
@@ -3,9 +3,13 @@ Re-usable card for linking to posts
 --}}
 
 <article class="gh-card {{post_class}}">
-    <a class="gh-card-link" href="{{url}}">
-        {{#if feature_image}}
-            <img class="gh-card-image"
+        <div class="gh-card-content">
+            <span class="gh-card-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time> <span class="bull">&bull;</span> {{reading_time}}</span>
+            <a class="gh-card-link" href="{{url}}">
+                <h2 class="gh-card-title">{{title}}</h2>
+            </a>
+            {{#if feature_image}}
+            <!--img class="gh-card-image"
                 srcset="{{img_url feature_image size="s"}} 300w,
                         {{img_url feature_image size="m"}} 600w,
                         {{img_url feature_image size="l"}} 1000w,
@@ -13,13 +17,11 @@ Re-usable card for linking to posts
                 sizes="(max-width: 1000px) 400px, 700px"
                 src="{{img_url feature_image size="m"}}"
                 alt="{{title}}"
-            />
-        {{/if}}
-        <div class="gh-card-content">
-            <span class="gh-card-meta"><time datetime="{{date format="YYYY-MM-DD"}}">{{date format="D MMM YYYY"}}</time> <span class="bull">&bull;</span> {{reading_time}}</span>
-            <h2 class="gh-card-title">{{title}}</h2>
+            /-->
+            {{/if}}
             <p>{{excerpt}}</p>
-            <strong>Read more</strong>
+            <a class="gh-card-link" href="{{url}}">
+                <strong>Read more</strong>
+            </a>            
         </div>
-    </a>
 </article>
